# ASan_demo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myapplication/: Commond.java  MainActivity.java
app/src/main/jni/: native_lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/resources/lib/arm64-v8a/: wrap.sh
